html4css1: fix inner alignment in figures
git-svn-id: https://docutils.svn.sourceforge.net/svnroot/docutils/trunk@6511 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/docutils/writers/html4css1/html4css1.css
+++ b/docutils/docutils/writers/html4css1/html4css1.css
@@ -180,7 +180,7 @@ img.align-center, .figure.align-center, object.align-center {
 
 /* reset inner alignment in figures */
 div.align-right {
-  text-align: left }
+  text-align: inherit }
 
 /* div.align-center * { */
 /*   text-align: left } */
